--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
     <div class="showcase">
       <div class="badge">
         <i class="fa-solid fa-car"></i>
-        <span class="tooltip">C8Corvette</span>
+        <span class="tooltip">C8 Corvette</span>
       </div>
       <div class="badge">
-        <i class="fa-solid fa-money-bill"></i>
+        <i class="fa-solid fa-building-columns"></i>
         <span class="tooltip">Rich</span>
       </div>
       <div class="badge">
