--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <span class="tooltip">C8 Corvette</span>
       </div>
       <div class="badge">
-        <i class="fa-solid fa-building-columns"></i>
+        <i class="fa-solid fa-wallet"></i>
         <span class="tooltip">Rich</span>
       </div>
       <div class="badge">
