--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta property="og:title" content="@jayson - 🤷‍♂️" />
   <meta property="og:description" content="the world is yours" />
-  <meta property="og:image" content="https://jaysons.lol/ref/misc/batman.png" />
+  <meta property="og:image" content="https://jaysons.lol/ref/misc/discordpfp.png" />
   <meta property="og:url" content="https://jaysons.lol" />
   <meta property="theme-color" content="#1b1b1b" />
   <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
@@ -13,7 +13,7 @@
   <script src="ref/js/bettersnow.js"></script>
   <script src="ref/js/ZOOOOOOOOM.js"></script>
   <title>@jayson</title>
-  <link rel="icon" href="/ref/misc/batmanimage.png" type="image/x-icon" />
+  <link rel="icon" href="/ref/misc/discordpfp.png" type="image/x-icon" />
   <link rel="stylesheet" href="ref/css/styles.css" />
   <link
     rel="stylesheet"
