--- a/index.html
+++ b/index.html
@@ -57,37 +57,59 @@
     }
 
     /* =========================
-       2) BLURRED-BOX UNFOLD
-       ========================= */
-    /*
-      We use "transform: scaleY(0)" + "opacity: 0" initially,
-      then "transform: scaleY(1)" + "opacity: 1" on .fade-in
-      for a smooth "unfolding" effect from the top.
+       2) WRAPPER FOR SLIDE-UP
+       =========================
+       This wrapper starts off-screen at the bottom
+       and moves into the center with a fade-in.
     */
-    .blurred-box {
-      /* Start folded & transparent */
-      transform: scaleY(0);
-      transform-origin: top center;
+    #mainBoxWrapper {
+      position: fixed;
+      left: 50%;
+      top: 100%; /* Start below the bottom edge */
+      transform: translateX(-50%);
       opacity: 0;
-      transition: transform 1s ease, opacity 1s ease;
-
-      /* The rest of your styling is inside .blurred-box's children (profile etc.) */
+      transition: top 1s ease, opacity 1s ease;
+      z-index: 10;
     }
-    .blurred-box.fade-in {
-      /* Unfold + fade in */
-      transform: scaleY(1);
+    #mainBoxWrapper.fade-in {
+      top: 50%; /* Move to vertical center */
       opacity: 1;
+      transform: translate(-50%, -50%);
     }
 
     /* =========================
-       3) 3D "LOOK AROUND" ON HOVER
-       ========================= */
-    /* We'll enable "preserve-3d" so rotates feel realistic */
-    .blurred-box {
+       3) THE BOX ITSELF (3D TILT)
+       =========================
+       We'll place the "blurred-box" styles here.
+       It's inside the wrapper, so the wrapper
+       handles the slide; the box handles tilt.
+    */
+    #mainBox {
+      /* Size/styling as needed. 
+         We'll give it "transform-style: preserve-3d"
+         so the 3D rotations are visible.
+      */
       transform-style: preserve-3d;
+      transition: transform 0.3s ease; /* for tilt smoothing */
+
+      /* Additional styling if you want a background behind the elements:
+         background: rgba(255, 255, 255, 0.1);
+         backdrop-filter: blur(10px);
+         border-radius: 15px;
+         etc.
+      */
     }
-    /* By default, it's not rotated. We'll rotate it via JS on mousemove. */
-    
+
+    /* Replacing your .blurred-box styles for the child.
+       If you had an actual blurred background here, you can add it below:
+    */
+    .profile-wrapper, .profile-name, .showcase, .icon-wrapper {
+      /* If you want them inside a 'box' visually, 
+         put your background styles in #mainBox above, 
+         or each child, as needed.
+       */
+    }
+
     /* =========================
        4) TYPING TEXT
        ========================= */
@@ -208,7 +230,7 @@
   </style>
 </head>
 
-<body class="blurred">
+<body>
   <!-- Background Image -->
   <div class="background"></div>
 
@@ -217,57 +239,60 @@
     <div class="proceed-button" id="proceedButton">click</div>
   </div>
   
-  <!-- Main Blurred Box with Profile Content -->
-  <div class="blurred-box" id="mainBox">
-    <div class="profile-wrapper">
-      <div class="profile-decoration"></div>
-      <div class="profile-picture"></div>
-    </div>
-    <div class="profile-name">jayson</div>
-    <div class="showcase">
-      <div class="badge">
-        <i class="fa-solid fa-car"></i>
-        <span class="tooltip">C8 Corvette</span>
+  <!-- WRAPPER that slides from bottom to center -->
+  <div id="mainBoxWrapper">
+    <!-- The box that tilts in 3D -->
+    <div id="mainBox">
+      <div class="profile-wrapper">
+        <div class="profile-decoration"></div>
+        <div class="profile-picture"></div>
       </div>
-      <div class="badge">
-        <i class="fa-solid fa-wallet"></i>
-        <span class="tooltip">Rich</span>
+      <div class="profile-name">jayson</div>
+      <div class="showcase">
+        <div class="badge">
+          <i class="fa-solid fa-car"></i>
+          <span class="tooltip">C8 Corvette</span>
+        </div>
+        <div class="badge">
+          <i class="fa-solid fa-wallet"></i>
+          <span class="tooltip">Rich</span>
+        </div>
+        <div class="badge">
+          <i class="fa-solid fa-star" style="color: white;"></i>
+          <span class="tooltip">Certified</span>
+        </div>
       </div>
-      <div class="badge">
-        <i class="fa-solid fa-star" style="color: white;"></i>
-        <span class="tooltip">Certified</span>
+      <div class="static-text" id="dynamic-text"></div>
+      <div class="icon-wrapper">
+        <a
+          href="https://www.instagram.com/jaysons.lol"
+          class="icon-button"
+          target="_blank"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.roblox.com/users/3290769146/profile"
+          class="icon-button"
+          target="_blank"
+        >
+          <i class="fas fa-globe"></i>
+        </a>
+        <a
+          href="https://discord.gg/stupid"
+          class="icon-button"
+          target="_blank"
+        >
+          <i class="fab fa-discord"></i>
+        </a>
+        <a
+          href="https://www.tiktok.com/@umjayson"
+          class="icon-button"
+          target="_blank"
+        >
+          <i class="fab fa-tiktok"></i>
+        </a>
       </div>
-    </div>
-    <div class="static-text" id="dynamic-text"></div>
-    <div class="icon-wrapper">
-      <a
-        href="https://www.instagram.com/jaysons.lol"
-        class="icon-button"
-        target="_blank"
-      >
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a
-        href="https://www.roblox.com/users/3290769146/profile"
-        class="icon-button"
-        target="_blank"
-      >
-        <i class="fas fa-globe"></i>
-      </a>
-      <a
-        href="https://discord.gg/stupid"
-        class="icon-button"
-        target="_blank"
-      >
-        <i class="fab fa-discord"></i>
-      </a>
-      <a
-        href="https://www.tiktok.com/@umjayson"
-        class="icon-button"
-        target="_blank"
-      >
-        <i class="fab fa-tiktok"></i>
-      </a>
     </div>
   </div>
 
@@ -288,9 +313,9 @@
   </div>
 
   <script>
-    /* =========================================
-       1) ENTER CLICK => SHOW BLURRED BOX, ETC.
-       ========================================= */
+    /* ===============================
+       1) ENTER CLICK => SHOW ANIMATIONS
+       =============================== */
     let hasClicked = false;
     let isMuted = false;
     let lastVolume = 0.5;
@@ -299,7 +324,8 @@
     const overlay          = document.getElementById('overlay');
     const proceedButton    = document.getElementById('proceedButton');
     const background       = document.querySelector('.background');
-    const blurredBox       = document.getElementById('mainBox');
+    const mainBoxWrapper   = document.getElementById('mainBoxWrapper');
+    const mainBox          = document.getElementById('mainBox');
     const volumeControl    = document.getElementById('volumeControl');
 
     function handleEnter() {
@@ -310,12 +336,12 @@
       proceedButton.classList.add('hide-proceed');
       background.classList.add('unblurred');
 
-      // Fade out overlay, then "unfold" the main blurred box
+      // Fade out overlay, then slide & fade in the wrapper
       setTimeout(() => {
         overlay.classList.add('fade-out');
 
-        // Add our "fade-in" class to unfold the .blurred-box
-        blurredBox.classList.add('fade-in');
+        // Let the wrapper slide from bottom to center
+        mainBoxWrapper.classList.add('fade-in');
 
         // Show volume control
         volumeControl.style.display = 'block';
@@ -336,9 +362,9 @@
       });
     }
 
-    /* =========================================
+    /* ===============================
        2) VOLUME CONTROL
-       ========================================= */
+       =============================== */
     const volumeButton = document.getElementById('volumeButton');
     const volumeSlider = document.getElementById('volumeSlider');
 
@@ -375,9 +401,9 @@
       }
     });
 
-    /* =========================================
+    /* ===============================
        3) TYPING TEXT
-       ========================================= */
+       =============================== */
     const phrases = [
       "@@",
       "follow my instagram & roblox",
@@ -414,19 +440,11 @@
       typePhrase();
     });
 
-    /* =========================================
+    /* ===============================
        4) 3D "LOOK AROUND" ON HOVER
-       =========================================
-       We'll rotate the .blurred-box in discrete zones:
-       - If mouse is near left => tilt left
-       - If near right => tilt right
-       - If near top => tilt up
-       - If near bottom => tilt down
-       - Otherwise => center
-       And "mouseout" => center again
-    */
-    blurredBox.addEventListener('mousemove', (e) => {
-      const rect = blurredBox.getBoundingClientRect();
+       =============================== */
+    mainBox.addEventListener('mousemove', (e) => {
+      const rect = mainBox.getBoundingClientRect();
       const x    = e.clientX - rect.left;
       const y    = e.clientY - rect.top;
 
@@ -434,35 +452,33 @@
       const zoneX = x / rect.width;
       const zoneY = y / rect.height;
 
-      // We'll define a threshold area ~ 1/3.
-      // If zoneX < 0.33 => tilt left, > 0.66 => tilt right, else center.
-      // If zoneY < 0.33 => tilt up, > 0.66 => tilt down, else center.
-      // Adjust angles to your preference.
-      let rotateX = 0;
-      let rotateY = 0;
+      // We'll define a threshold area ~ 1/3:
+      // If zoneX < 0.33 => tilt left;  > 0.66 => tilt right; else center
+      // If zoneY < 0.33 => tilt up;    > 0.66 => tilt down;  else center
+      let rotateX = 0; // "tilt up/down"
+      let rotateY = 0; // "tilt left/right"
 
-      // Horizontal
+      // Horizontal tilt
       if (zoneX < 0.33) {
-        rotateY = 15;   // tilt left
+        rotateY = 15;  // tilt left
       } else if (zoneX > 0.66) {
-        rotateY = -15;  // tilt right
+        rotateY = -15; // tilt right
       }
 
-      // Vertical
+      // Vertical tilt
       if (zoneY < 0.33) {
-        rotateX = 15;   // tilt "up"
+        rotateX = 15;  // tilt up
       } else if (zoneY > 0.66) {
-        rotateX = -15;  // tilt "down"
+        rotateX = -15; // tilt down
       }
 
-      // Apply combined rotation
-      // We keep scaleY(1) to preserve the "unfolded" state
-      blurredBox.style.transform = `scaleY(1) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
+      // Apply the combined rotation
+      mainBox.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
     });
 
     // When mouse leaves the box, snap back to center orientation
-    blurredBox.addEventListener('mouseleave', () => {
-      blurredBox.style.transform = 'scaleY(1) rotateX(0) rotateY(0)';
+    mainBox.addEventListener('mouseleave', () => {
+      mainBox.style.transform = 'rotateX(0) rotateY(0)';
     });
   </script>
 </body>
